prusti-tests/tests/verify/ui/failing-postcondition.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/failing-postcondition.rs:8:11
  |
8 | #[ensures(something_true() && false)]
  |           ^^^^^^^^^^^^^^^^    ^^^^^
  |
note: the error originates here
 --> $DIR/failing-postcondition.rs:9:1
  |
9 | fn client(a: u32) {}
  | ^^^^^^^^^^^^^^^^^^^^

error: [Prusti: verification error] postcondition of pure function definition might not hold
  --> $DIR/failing-postcondition.rs:13:1
   |
13 | fn test1() -> bool { false }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/failing-postcondition.rs:13:1
   |
13 | fn test1() -> bool { false }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: [Prusti: verification error] postcondition of pure function definition might not hold
  --> $DIR/failing-postcondition.rs:16:11
   |
16 | #[ensures(x)]
   |           ^
   |
note: the error originates here
  --> $DIR/failing-postcondition.rs:16:11
   |
16 | #[ensures(x)]
   |           ^

error: aborting due to 3 previous errors

